@@ -1,8 +1,6 @@
-/*[INCLUDE-IF Sidecar16]*/
-package java.lang;
-
+/*[INCLUDE-IF Sidecar18-SE]*/
 /*******************************************************************************
- * Copyright (c) 1998, 2018 IBM Corp. and others
+ * Copyright (c) 1998, 2020 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -22,6 +20,7 @@ package java.lang;
  *
  * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  *******************************************************************************/
+package java.lang;
 
 import java.io.*;
 import java.util.Map;
@@ -32,14 +31,13 @@ import java.lang.reflect.Method;
 
 /*[IF Sidecar19-SE]*/
 import jdk.internal.misc.Unsafe;
+/*[IF Java12]*/
+import jdk.internal.access.SharedSecrets;
+/*[ELSE]
 import jdk.internal.misc.SharedSecrets;
+/*[ENDIF] Java12 */
 import jdk.internal.misc.VM;
 import java.lang.StackWalker.Option;
-/*[IF Sidecar19-SE-OpenJ9]
-import java.lang.Module;
-/*[ELSE]
-import java.lang.reflect.Module;
-/*[ENDIF]*/
 import jdk.internal.reflect.Reflection;
 import jdk.internal.reflect.CallerSensitive;
 import java.util.*;
@@ -50,6 +48,10 @@ import sun.misc.SharedSecrets;
 import sun.misc.VM;
 import sun.reflect.CallerSensitive;
 /*[ENDIF]*/
+/*[IF Sidecar19-SE]*/
+import com.ibm.gpu.spi.GPUAssist;
+import com.ibm.gpu.spi.GPUAssistHolder;
+/*[ENDIF] Sidecar19-SE */
 
 /**
  * Class System provides a standard place for programs
@@ -95,18 +97,13 @@ public final class System {
 	private static String lineSeparator;
 		
 	private static boolean propertiesInitialized = false;
-	private static boolean useLegacyVerPresents = false; 
 
 	private static String platformEncoding;
 	private static String fileEncoding;
 	private static String osEncoding;
 
 /*[IF Sidecar19-SE]*/
-/*[IF Sidecar19-SE-OpenJ9]
 	static java.lang.ModuleLayer	bootLayer;
-/*[ELSE]*/
-	static java.lang.reflect.Layer	bootLayer;
-/*[ENDIF]*/
 /*[ENDIF]*/
 	
 	// Initialize all the slots in System on first use.
@@ -145,16 +142,10 @@ public final class System {
 		}
 
 		// Fill in the properties from the VM information.
-		ensureProperties();
+		ensureProperties(true);
 
 		/*[PR CMVC 150472] sun.misc.SharedSecrets needs access to java.lang. */
 		SharedSecrets.setJavaLangAccess(new Access());
-
-		/*[PR CMVC 179976] System.setProperties(null) throws IllegalStateException */
-		try {
-			VM.saveAndRemoveProperties(systemProperties);
-		} catch (NoSuchMethodError e) {
-		}
 		
 		/*[REM] Initialize the JITHelpers needed in J9VMInternals since the class can't do it itself */
 		try {
@@ -185,7 +176,7 @@ public final class System {
 		/*[ELSE]*/
 		StringCoding.encode(new char[1], 0, 1);
 		/*[ENDIF]*/
-		/*[IF Sidecar18-SE-OpenJ9|Sidecar19-SE]*/
+		/*[IF (Sidecar18-SE-OpenJ9|Sidecar19-SE)&!(PLATFORM-mz31|PLATFORM-mz64)]*/
 		setErr(new PrintStream(new BufferedOutputStream(new FileOutputStream(FileDescriptor.err)), true));
 		setOut(new PrintStream(new BufferedOutputStream(new FileOutputStream(FileDescriptor.out)), true));
 		/*[IF Sidecar19-SE_RAWPLUSJ9]*/
@@ -228,17 +219,21 @@ static void completeInitialization() {
 	}
 	/*[ENDIF]*/ // Sidecar18-SE-OpenJ9
 	
-	/*[IF Sidecar18-SE-OpenJ9|Sidecar19-SE]*/
+	/*[IF (Sidecar18-SE-OpenJ9|Sidecar19-SE)&!(PLATFORM-mz31|PLATFORM-mz64)]*/
 	setIn(new BufferedInputStream(new FileInputStream(FileDescriptor.in)));
 	/*[ELSE]*/
 	/*[PR 100718] Initialize System.in after the main thread*/
 	setIn(com.ibm.jvm.io.ConsoleInputStream.localize(new BufferedInputStream(new FileInputStream(FileDescriptor.in))));
 	/*[ENDIF]*/ //Sidecar18-SE-OpenJ9|Sidecar19-SE
-	/*[ENDIF] */ //!Sidecar19-SE_RAWPLUSJ9
+	/*[ENDIF]*/ //!Sidecar19-SE_RAWPLUSJ9
 		
 	/*[PR 102344] call Terminator.setup() after Thread init */
 	Terminator.setup();
-	
+
+	/*[IF Sidecar19-SE]*/
+	initGPUAssist();
+	/*[ENDIF] Sidecar19-SE */
+
 	/*[IF !Sidecar19-SE_RAWPLUSJ9&!Sidecar18-SE-OpenJ9]*/
 	try {
 		if (null != systemInitialization) {
@@ -251,6 +246,40 @@ static void completeInitialization() {
 	/*[ENDIF]*/	//!Sidecar19-SE_RAWPLUSJ9&!Sidecar18-SE-OpenJ9
 }
 
+/*[IF Sidecar19-SE]*/
+private static void initGPUAssist() {
+	Properties props = internalGetProperties();
+
+	if ((props.getProperty("com.ibm.gpu.enable") == null) //$NON-NLS-1$
+	&& (props.getProperty("com.ibm.gpu.enforce") == null) //$NON-NLS-1$
+	) {
+		/*
+		 * The CUDA implementation of GPUAssist is not enabled by default:
+		 * one of the above properties must be set.
+		 */
+		return;
+	}
+
+	PrivilegedAction<GPUAssist> finder = new PrivilegedAction<GPUAssist>() {
+		@Override
+		public GPUAssist run() {
+			ServiceLoader<GPUAssist.Provider> loaded = ServiceLoader.load(GPUAssist.Provider.class);
+
+			for (GPUAssist.Provider provider : loaded) {
+				GPUAssist assist = provider.getGPUAssist();
+
+				if (assist != null) {
+					return assist;
+				}
+			}
+
+			return GPUAssist.NONE;
+		}
+	};
+
+	GPUAssistHolder.instance = AccessController.doPrivileged(finder);
+}
+/*[ENDIF] Sidecar19-SE */
 
 /**
  * Sets the value of the static slot "in" in the receiver
@@ -366,73 +395,115 @@ private static native Properties initProperties(Properties props);
  * provided by the virtual machine.
  */
 @SuppressWarnings("nls")
-private static void ensureProperties() {
+private static void ensureProperties(boolean isInitialization) {
 /*[IF OpenJ9-RawBuild]*/
 	// invoke JCL native to initialize platform encoding
 	initProperties(new Properties());
 /*[ENDIF] OpenJ9-RawBuild */
 	
-	systemProperties = new Properties();
+/*[IF Java12]*/
+	Map<String, String> initializedProperties = new Hashtable<String, String>();
+/*[ELSE]
+	Properties initializedProperties = new Properties();
+/*[ENDIF] Java12 */
 
-	if (osEncoding != null)
-		systemProperties.put("os.encoding", osEncoding); //$NON-NLS-1$
+	if (osEncoding != null) {
+		initializedProperties.put("os.encoding", osEncoding); //$NON-NLS-1$
+	}
 	/*[PR The launcher apparently needs sun.jnu.encoding property or it does not work]*/
-	systemProperties.put("ibm.system.encoding", platformEncoding); //$NON-NLS-1$
-	systemProperties.put("sun.jnu.encoding", platformEncoding); //$NON-NLS-1$
-	
-	systemProperties.put("file.encoding", fileEncoding); //$NON-NLS-1$
-
-	systemProperties.put("file.encoding.pkg", "sun.io"); //$NON-NLS-1$ //$NON-NLS-2$
-
-	/*[IF Sidecar19-SE]*/
-	systemProperties.put("java.specification.version", "9"); //$NON-NLS-1$ //$NON-NLS-2$
-	/*[ELSE]*/ 
-	systemProperties.put("java.specification.version", "1.8"); //$NON-NLS-1$ //$NON-NLS-2$
-	/*[ENDIF] Sidecar19-SE */
-	
-
-	systemProperties.put("java.specification.vendor", "Oracle Corporation"); //$NON-NLS-1$ //$NON-NLS-2$
-	systemProperties.put("java.specification.name", "Java Platform API Specification"); //$NON-NLS-1$ //$NON-NLS-2$
-
-	systemProperties.put("com.ibm.oti.configuration", "scar"); //$NON-NLS-1$
-	/*[IF] Clear
-	systemProperties.put("com.ibm.oti.configuration", "clear"); //$NON-NLS-1$
-	systemProperties.put("com.ibm.oti.configuration.dir", "jclClear"); //$NON-NLS-1$ //$NON-NLS-2$
-	/*[ENDIF]*/
+	initializedProperties.put("ibm.system.encoding", platformEncoding); //$NON-NLS-1$
+	initializedProperties.put("sun.jnu.encoding", platformEncoding); //$NON-NLS-1$
+	initializedProperties.put("file.encoding", fileEncoding); //$NON-NLS-1$
+	initializedProperties.put("file.encoding.pkg", "sun.io"); //$NON-NLS-1$ //$NON-NLS-2$
+	/*[IF !Java12]*/
+	/* System property java.specification.vendor is set via VersionProps.init(systemProperties) since JDK12 */
+	initializedProperties.put("java.specification.vendor", "Oracle Corporation"); //$NON-NLS-1$ //$NON-NLS-2$
+	/*[ENDIF] !Java12 */
+	initializedProperties.put("java.specification.name", "Java Platform API Specification"); //$NON-NLS-1$ //$NON-NLS-2$
+	initializedProperties.put("com.ibm.oti.configuration", "scar"); //$NON-NLS-1$
 
 	String[] list = getPropertyList();
-	for (int i=0; i<list.length; i+=2) {
+	for (int i = 0; i < list.length; i += 2) {
 		String key = list[i];
 		/*[PR 100209] getPropertyList should use fewer local refs */
-		if (key == null) break;
-		systemProperties.put(key, list[i+1]);
+		if (key == null) {
+			break;
+		}
+		initializedProperties.put(key, list[i+1]);
 	}
 	
-	propertiesInitialized = true;
-	
-	/*[IF Sidecar19-SE]*/
 	/* java.lang.VersionProps.init() eventually calls into System.setProperty() where propertiesInitialized needs to be true */
+	propertiesInitialized = true;
+
+/*[IF Java12]*/
+	java.lang.VersionProps.init(initializedProperties);
+/*[ELSE]
+	/* VersionProps.init requires systemProperties to be set */
+	systemProperties = initializedProperties;
+
+/*[IF Sidecar19-SE]*/
 	java.lang.VersionProps.init();
-	/*[ELSE]*/
+/*[ELSE]
 	sun.misc.Version.init();
-	/*[ENDIF] Sidecar19-SE */
 
 	StringBuffer.initFromSystemProperties(systemProperties);
 	StringBuilder.initFromSystemProperties(systemProperties);
+/*[ENDIF] Sidecar19-SE */
+/*[ENDIF] Java12 */
 
-	String javaRuntimeVersion = systemProperties.getProperty("java.runtime.version"); //$NON-NLS-1$
+/*[IF Java12]*/
+	String javaRuntimeVersion = initializedProperties.get("java.runtime.version"); //$NON-NLS-1$
+/*[ELSE]
+	String javaRuntimeVersion = initializedProperties.getProperty("java.runtime.version"); //$NON-NLS-1$
+/*[ENDIF] Java12 */
 	if (null != javaRuntimeVersion) {
-		String fullVersion = systemProperties.getProperty("java.fullversion"); //$NON-NLS-1$
+	/*[IF Java12]*/
+		String fullVersion = initializedProperties.get("java.fullversion"); //$NON-NLS-1$
+	/*[ELSE]
+		String fullVersion = initializedProperties.getProperty("java.fullversion"); //$NON-NLS-1$
+	/*[ENDIF] Java12 */
 		if (null != fullVersion) {
-			systemProperties.put("java.fullversion", (javaRuntimeVersion + "\n" + fullVersion)); //$NON-NLS-1$ //$NON-NLS-2$
+			initializedProperties.put("java.fullversion", (javaRuntimeVersion + "\n" + fullVersion)); //$NON-NLS-1$ //$NON-NLS-2$
 		}
 		rasInitializeVersion(javaRuntimeVersion);
 	}
 
-	lineSeparator = systemProperties.getProperty("line.separator", "\n"); //$NON-NLS-1$
-	/*[IF Sidecar19-SE]*/
-	useLegacyVerPresents = systemProperties.containsKey("use.legacy.version");
-	/*[ENDIF]*/
+/*[IF Java12]*/
+	lineSeparator = initializedProperties.getOrDefault("line.separator", "\n"); //$NON-NLS-1$
+/*[ELSE]
+	lineSeparator = initializedProperties.getProperty("line.separator", "\n"); //$NON-NLS-1$
+/*[ENDIF] Java12 */
+
+	if (isInitialization) {
+		/*[PR CMVC 179976] System.setProperties(null) throws IllegalStateException */
+		/*[IF Java12]*/
+		VM.saveProperties(initializedProperties);
+		/*[ELSE]
+		VM.saveAndRemoveProperties(initializedProperties);
+		/*[ENDIF] Java12 */
+	}
+
+	/* create systemProperties from properties Map */
+/*[IF Java12]*/
+	initializeSystemProperties(initializedProperties);
+/*[ELSE]
+	systemProperties = initializedProperties;
+/*[ENDIF] Java12 */
+	
+	/* Preload system property jdk.serialFilter to prevent later modification */
+	jdk.internal.util.StaticProperty.jdkSerialFilter();
+}
+
+/* Converts a Map<String, String> to a properties object.
+ * 
+ * The system properties will be initialized as a Map<String, String> type to be compatible
+ * with jdk.internal.misc.VM and java.lang.VersionProps APIs.
+ */
+private static void initializeSystemProperties(Map<String, String> mapProperties) {
+	systemProperties = new Properties();
+	for (Map.Entry<String, String> property : mapProperties.entrySet()) {
+		systemProperties.put(property.getKey(), property.getValue());
+	}
 }
 
 private static native void rasInitializeVersion(String javaRuntimeVersion);
@@ -516,12 +587,14 @@ static Properties internalGetProperties() {
  * The properties currently provided by the virtual
  * machine are:
  * <pre>
+/*[IF !Java12]
+ *     java.vendor
  *     java.vendor.url
+ /*[ENDIF] Java12
  *     java.class.path
  *     user.home
  *     java.class.version
  *     os.version
- *     java.vendor
  *     user.dir
  *     user.timezone
  *     path.separator
@@ -539,24 +612,7 @@ static Properties internalGetProperties() {
  */
 @SuppressWarnings("nls")
 public static String getProperty(String prop) {
-	String propertyString = getProperty(prop, null);
-	/*[IF Sidecar19-SE]*/
-	if (useLegacyVerPresents && prop.equals("java.version")) {
-		StackWalker walker = StackWalker.getInstance(Option.RETAIN_CLASS_REFERENCE);
-
-		/* If jdk.internal.misc.VM.initLevel() < 4, bootstrap isn't completed yet, walker.getCallerClass().getModule()
-		 * can be null, return real version in this case. 
-		 */
-		Module callerModule = walker.getCallerClass().getModule();
-		
-		if ((jdk.internal.misc.VM.initLevel() >= 4) 
-			&& ((null == callerModule) || (!callerModule.isNamed()))
-		) {
-			propertyString = "1.9.0";
-		}
-	}
-	/*[ENDIF]*/
-	return propertyString;
+	return getProperty(prop, null);
 }
 
 /**
@@ -668,9 +724,20 @@ public static int identityHashCode(Object anObject) {
 @CallerSensitive
 public static void load(String pathName) {
 	SecurityManager smngr = System.getSecurityManager();
-	if (smngr != null)
+	if (smngr != null) {
 		smngr.checkLink(pathName);
+	}
+/*[IF Java15]*/
+	File fileName = new File(pathName);
+	if (fileName.isAbsolute()) {
+		ClassLoader.loadLibrary(getCallerClass(), fileName);
+	} else {
+		/*[MSG "K0648", "Not an absolute path: {0}"]*/
+		throw new UnsatisfiedLinkError(com.ibm.oti.util.Msg.getString("K0648", pathName));//$NON-NLS-1$
+	}
+/*[ELSE]
 	ClassLoader.loadLibraryWithPath(pathName, ClassLoader.callerClassLoader(), null);
+/*[ENDIF] Java15 */
 }
 
 /**
@@ -683,7 +750,11 @@ public static void load(String pathName) {
  */
 @CallerSensitive
 public static void loadLibrary(String libName) {
+/*[IF Java15]*/
+	ClassLoader.loadLibrary(getCallerClass(), libName);
+/*[ELSE]*/
 	ClassLoader.loadLibraryWithClassLoader(libName, ClassLoader.callerClassLoader());
+/*[ENDIF] Java15 */
 }
 
 /**
@@ -732,7 +803,7 @@ public static void setProperties(Properties p) {
 	if (security != null)
 		security.checkPropertiesAccess();
 	if (p == null) {
-		ensureProperties();
+		ensureProperties(false);
 	} else {
 		systemProperties = p;
 	}
@@ -746,36 +817,57 @@ public static void setProperties(Properties p) {
  *
  * @param		s			the new security manager
  * 
- * @throws		SecurityException 	if the security manager has already been set.
+ * @throws		SecurityException 	if the security manager has already been set and its checkPermission method doesn't allow it to be replaced.
+ /*[IF Java12]
+ * @throws		UnsupportedOperationException 	if s is non-null and a special token "disallow" has been set for system property "java.security.manager"
+ * 												which indicates that a security manager is not allowed to be set dynamically.
+ /*[ENDIF] Java12
  */
 public static void setSecurityManager(final SecurityManager s) {
 	/*[PR 113606] security field could be modified by another Thread */
 	final SecurityManager currentSecurity = security;
 	
 	if (s != null) {
-		try {
-			/*[PR 95057] preload classes required for checkPackageAccess() */
-			// Preload classes used for checkPackageAccess(),
-			// otherwise we could go recursive 
-			s.checkPackageAccess("java.lang"); //$NON-NLS-1$
-		} catch (Exception e) {}
+		/*[IF Java12]*/
+		if ("disallow".equals(systemProperties.getProperty("java.security.manager"))) { //$NON-NLS-1$ //$NON-NLS-2$
+			/*[MSG "K0B00", "`-Djava.security.manager=disallow` has been specified"]*/
+			throw new UnsupportedOperationException(com.ibm.oti.util.Msg.getString("K0B00")); //$NON-NLS-1$
+		}
+		/*[ENDIF] Java12 */
+		if (currentSecurity == null) {
+			// only preload classes when current security manager is null
+			// not adding an extra static field to preload only once
+			try {
+				/*[PR 95057] preload classes required for checkPackageAccess() */
+				// Preload classes used for checkPackageAccess(),
+				// otherwise we could go recursive 
+				s.checkPackageAccess("java.lang"); //$NON-NLS-1$
+			} catch (Exception e) {
+				// ignore any potential exceptions
+			}
+		}
+		
 		try {
 			/*[PR 97686] Preload the policy permission */
-			AccessController.doPrivileged(new PrivilegedAction() {
-				public Object run() {
-					ProtectionDomain oldDomain = currentSecurity == null ?
-						System.class.getPDImpl() : currentSecurity.getClass().getPDImpl();
-						ProtectionDomain newDomain = s.getClass().getPDImpl();
-					if (oldDomain != newDomain) {
-						// initialize external messages
+			AccessController.doPrivileged(new PrivilegedAction<Void>() {
+				@Override
+				public Void run() {
+					if (currentSecurity == null) {
+						// initialize external messages and 
+						// also load security sensitive classes 
 						com.ibm.oti.util.Msg.getString("K002c"); //$NON-NLS-1$
+					}
+					ProtectionDomain pd = s.getClass().getPDImpl();
+					if (pd != null) {
 						// initialize the protection domain, which may include preloading the
 						// dynamic permissions from the policy before installing
-						newDomain.implies(new AllPermission());
+						pd.implies(sun.security.util.SecurityConstants.ALL_PERMISSION);
 					}
 					return null;
 				}});
-		} catch (Exception e) {}
+		} catch (Exception e) {
+			// ignore any potential exceptions
+		}
 	}
 	if (currentSecurity != null) {
 		currentSecurity.checkPermission(com.ibm.oti.util.RuntimePermissions.permissionSetSecurityManager);
@@ -1282,12 +1374,34 @@ public interface Logger {
 	 * System loggers levels
 	 */
 	public enum Level {
+		/**
+		 * Enable all logging level messages
+		 */
 		ALL(Integer.MIN_VALUE),
+		/**
+		 * Enable TRACE level messages
+		 */
 		TRACE(400),
+		/**
+		 * Enable DEBUG level messages
+		 */
 		DEBUG(500),
+		/**
+		 * Enable INFO level messages
+		 */
 		INFO(800),
+		/**
+		 * Enable WARNING level messages
+		 */
 		WARNING(900),
+		/**
+		 * Enable ERROR level messages
+		 */
 		ERROR(1000),
+		/**
+		 *
+		 * Disable logging 
+		 */
 		OFF(Integer.MAX_VALUE);
 		
 		final int severity;
